Atualização geral do código da Tarefa 4

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <h1>Trocar Cor</h1>
     <div class="boxCor" id="boxCor">Cor</div>
     <button id="trocarCorBtn">Mudar Cor</button>
+    <footer>
+      <p>
+        &copy; 2025 - Desenvolvido por
+        <a href="https://www.linkedin.com/in/lucas-ackermann05" target="_blank"
+          >Lucas Ackermann</a
+        >.
+      </p>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
